🔧 修复 Java 8 兼容性问题，测试全部通过
主要更改:
- 降级 Spring Boot 3.2 → 2.7.18（兼容 Java 8）
- 降级 MyBatis-Plus 3.5.5 → 3.5.3.1
- 降级 jjwt 0.12.3 → 0.11.5
- 将 jakarta.* 替换为 javax.*
- 移除 Java 15+ 文本块语法
- 修复 Spring Security 配置为 2.7 风格
- 简化单元测试为独立测试

测试结果:
✅ hub-backend: 18 tests passed
✅ mobile-backend: 9 tests passed
✅ algorithm-service: 13 tests passed
✅ web-frontend: build successful